# sourcehub

./: .env.example  .gitignore  compose.override.yml  compose.yml  pyproject.toml
database/: pyproject.toml
database/alembic/: env.py
database/alembic/versions/: 0001_create_document_chunk_table.py
database/database/: __init__.py  base.py  mixins.py  settings.py
database/database/models/: __init__.py  chunk.py
frontend/: pyproject.toml
frontend/frontend/: app.py  authenticate.py  requirements.txt
