[tool.poetry]
name = "frontend"
version = "0.1.0"
description = ""
authors = ["Mustafa Yasin <myasin@adobe.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
streamlit = "^1.42.0"
openai = "0.27.9"
langchain = "^0.3.18"
langchain-community = "^0.3.17"
docx2txt = "^0.8"
pypdf = "^5.3.0"
tiktoken = "^0.8.0"
unstructured = {extras = ["pdf"], version = "^0.16.20"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
